[package]
name = "rustpython-parser-core"
version = "0.3.1"
edition = "2021"

[dependencies]
# vendored dependency shouldn't be placed out of this crate
rustpython-parser-vendored.workspace = true
serde = { version = "1.0.133", optional = true, default-features = false, features = ["derive"] }
is-macro.workspace = true
memchr.workspace = true

[features]
default = []
location = []
