[package]
name = "rustpython-format"
edition = "2021"
version = "0.3.1"
description = "Format helpers for RustPython"
authors = ["RustPython Team"]
repository = "https://github.com/parkheenoung/Parser/"
license = "MIT"

[dependencies]
rustpython-literal = { workspace = true }

bitflags = "2.3.1"
itertools = "0.10.5"
malachite-bigint = { workspace = true }
num-traits = { workspace = true }
